--- a/.github/workflows/repo-sync.yml
+++ b/.github/workflows/repo-sync.yml
@@ -1,4 +1,3 @@
-# File: .github/workflows/repo-sync.yml
 name: A🔄自动同步🔄A
 on:
   schedule:
@@ -24,7 +23,7 @@ jobs:
         uses: repo-sync/github-sync@v2
         if: env.PAT
         with:
-          source_repo: "https://github.com/wuzhi01/MyActions.git"
+          source_repo: "https://gitee.com/shuye72/MyActions.git"
           source_branch: "main"
           destination_branch: "main"
           github_token: ${{ github.event.client_payload.PAT || secrets.PAT }}
