--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -14,6 +14,10 @@
 ****Please don't quote this rewrite configuration****
 
 
+
+# > 092 疯狂脑洞大开1&2 破解钻石和关卡权限（20210504）
+;The content is obtained from the Cuttlefish WeChat public account
+
 # > 091 酷我音乐 解锁皮肤主题（20210425）
 ^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/theme)  url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/theme.js
 
