--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -16,7 +16,7 @@
 # > 093 ToonMe 破解会员功能包括去广告及会员模板（20210505）
 ;The script is obtained from the Cuttlefish WeChat public account
 
-# > 092 疯狂脑洞大开1&2 破解钻石和关卡权限（20210504）
+# > 092 疯狂脑洞大开1&2++ 破解钻石和关卡权限（20210504）
 ;The content is obtained from the Cuttlefish WeChat public account
 
 # > 091 酷我音乐 解锁皮肤主题（20210425）
