--- a/Profile/Shadowrocket.conf
+++ b/Profile/Shadowrocket.conf
@@ -43,7 +43,7 @@ cdn.pcbeta.css.inimc.com = 120.52.19.113
 
 [URL Rewrite]
 #TikTok国际版抖音最新版解锁
-(?<=_region=)CN(?=&) JP 307
+(?<=_region=)CN(?=&) US 307
 (?<=&mcc_mnc=)4 2 307
 ^(https?:\/\/dm[\w-]+\.\w+\.com\/.+)(\?)(.+) $1$3 302
 (^https?:\/\/*\.\w{4}okv.com\/.+&.+)(\d{2}\.3\.\d)(.+) $118.0$3 302
