--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -4,7 +4,7 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @TgChannel         频道已移除所有人员，私有不再对外公开
 // @WechatID          墨鱼手记
-// @UpdateTime        20210505
+// @UpdateTime        20210508
 // @Attention         Only for backup,please don't quote this rewrite configuration
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ForExplain        “++” is the sign of Http Catcher Rules
@@ -14,7 +14,7 @@
 ****Please don't quote this rewrite configuration****
 
 # > 093 ToonMe 破解会员功能包括去广告及会员模板（20210505）
-;The script is obtained from the Cuttlefish WeChat public account
+https://purchases.ws.pho.to/api/v2/apple/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/tm.js
 
 # > 092 疯狂脑洞大开1&2++ 破解钻石和关卡权限（20210504）
 ;The content is obtained from the Cuttlefish WeChat public account
