--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -4,14 +4,19 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @TgChannel         频道已移除所有人员，私有不再对外公开
 // @WechatID          墨鱼手记
-// @UpdateTime        20210508
+// @UpdateTime        20210510
 // @Attention         Only for backup,please don't quote this rewrite configuration
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ForExplain        “++” is the sign of Http Catcher Rules
+// @Appreciation      更新不易，有能力的请去公众号打赏杯凉白开，谢谢
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Quan_crack.conf
 // ==/UserScript==
 
 ****Please don't quote this rewrite configuration****
+
+
+# > 094 SimplyPiano 高级会员权限破解（202105010）
+;uncompleted
 
 # > 093 ToonMe 破解会员功能包括去广告及会员模板（20210505）
 https://purchases.ws.pho.to/api/v2/apple/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/tm.js
