--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -15,6 +15,8 @@
 
 ****Please don't quote this rewrite configuration****
 
+# > 095 Altstore
+https:\/\/www\.patreon\.com\/api\/oauth2\/v2\/identity? url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/altstore.js
 
 # > 094 SimplyPiano 高级会员权限破解（202105010）
 ;uncompleted
