--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -15,11 +15,15 @@
 
 ****Please don't quote this rewrite configuration****
 
-# > 095 Altstore
-https:\/\/www\.patreon\.com\/api\/oauth2\/v2\/identity? url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/altstore.js
+
+# > 096 Pixiv 解锁高级会员权限并去除广告（20210513）
+
+
+# > 095 Altstore not testing（20210512）
+;https:\/\/www\.patreon\.com\/api\/oauth2\/v2\/identity? url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/altstore.js
 
 # > 094 SimplyPiano 高级会员权限破解（202105010）
-;uncompleted
+;add for testing - not completed yet
 
 # > 093 ToonMe 破解会员功能包括去广告及会员模板（20210505）
 https://purchases.ws.pho.to/api/v2/apple/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/tm.js
