--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -4,7 +4,7 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @TgChannel         频道已移除所有人员，私有不再对外公开
 // @WechatID          墨鱼手记
-// @UpdateTime        20210510
+// @UpdateTime        20210512
 // @Attention         Only for backup,please don't quote this rewrite configuration
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ForExplain        “++” is the sign of Http Catcher Rules
@@ -16,6 +16,9 @@
 ****Please don't quote this rewrite configuration****
 
 
+
+# > 098 Vizmato 破解VIP无限使用高级功能（20210512）
+https://web.vizmato.com/itunesreceipt_v5.php url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/vm.js
 
 # > 097 Headspace 破解会员音频享受宁静音乐（20210513）
 
