--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -17,8 +17,8 @@
 
 
 
-# > 098 西窗烛 解锁终身会员 文艺范的福音（20200924）Attention：登录使用
-;https://avoscloud.com/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcz.js
+# > 098 西窗烛 修复版 解锁终身会员 文艺范的福音（20210514）Attention：登录使用
+https://lchttpapi.xczim.com/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcz.js
 
 # > 097 Vizmato 破解VIP无限使用高级功能（20210512）
 https://web.vizmato.com/itunesreceipt_v5.php url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/vm.js
