--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -15,7 +15,8 @@
 
 ****Please don't quote this rewrite configuration****
 
-
+# > 099 小睡眠 新版有sign校验 请自行抓包旧版安装（20210515）
+;Tips
 
 # > 098 西窗烛 修复版 解锁终身会员 文艺范的福音（20210514）Attention：登录使用
 https://lchttpapi.xczim.com/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcz.js
