--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -18,7 +18,8 @@
 
 
 
-
+# > 100 我奥篮球 解锁付费直播回放及回放下载（20210515）
+http://api.woaoo.net/.+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/walq.js
 
 # > 099 小睡眠 新版有sign校验 请自行抓包旧版安装（20210515）
 ;Tips
