--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -18,11 +18,11 @@
 
 
 
-# > 100 我奥篮球 解锁付费直播回放及回放下载（20210515）
+# > 100 我奥篮球 解锁付费直播回放及回放下载（20210515）by photonmang
 http://api.woaoo.net/.+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/walq.js
 
 # > 099 小睡眠 新版有sign校验 请自行抓包旧版安装（20210515）
-;Tips
+;Please download old ipa version
 
 # > 098 西窗烛 修复版 解锁终身会员 文艺范的福音（20210514）Attention：登录使用
 https://lchttpapi.xczim.com/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcz.js
