--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -16,8 +16,6 @@
 ****Please don't quote this rewrite configuration****
 
 
-
-
 # > 100 我奥篮球 解锁付费直播回放及回放下载（20210515）by photonmang
 http://api.woaoo.net/.+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/walq.js
 
@@ -52,7 +50,7 @@ https://purchases.ws.pho.to/api/v2/apple/* url script-response-body https://raw.
 ;The content is obtained from the Cuttlefish WeChat public account
 
 # > 089 Dayone 更新会员crack功能（20210423）
-;uncomplete
+https:\/\/dayone\.(me|app)\/api\/(users|v2\/users\/(account-status|receipt))$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/dayone.js
 
 # > 088 Imgplay++ Inside++ Dazz++ Photofox++ 一次性解锁Premium （20210423）
 ;The content is obtained from the Cuttlefish WeChat public account
