--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -49,7 +49,7 @@ https://purchases.ws.pho.to/api/v2/apple/* url script-response-body https://raw.
 # > 090 时尚芭莎++ 卡通相机++ iHTTP浏览器++ 解锁会员权限功能（20210424）
 ;The content is obtained from the Cuttlefish WeChat public account
 
-# > 089 Dayone 更新会员crack功能（20210423）
+# > 089 Dayone 更新会员crack功能（20210515）by langkhach
 https:\/\/dayone\.(me|app)\/api\/(users|v2\/users\/(account-status|receipt))$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/dayone.js
 
 # > 088 Imgplay++ Inside++ Dazz++ Photofox++ 一次性解锁Premium （20210423）
