--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -16,6 +16,9 @@
 ****Please don't quote this rewrite configuration****
 
 
+# > 101 京东取消店铺会员 跳转浏览器版 （20210516）
+https://api\.m\.jd\.com\/client\.action\?appid=jd_shop_member&functionId=getShopMemberCardDetail&.+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/unbind.js
+
 # > 100 我奥篮球 解锁付费直播回放及回放下载（20210515）by photonmang
 http://api.woaoo.net/.+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/walq.js
 
