--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -4,7 +4,7 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @TgChannel         频道已移除所有人员，私有不再对外公开
 // @WechatID          墨鱼手记
-// @UpdateTime        20210515
+// @UpdateTime        20210519
 // @Attention         Only for backup,please don't quote this rewrite configuration
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ForExplain        “++” is the sign of Http Catcher Rules
@@ -15,6 +15,12 @@
 
 ****Please don't quote this rewrite configuration****
 
+
+# > 102 VSCO 修复版 解锁VIP会员功能 （20210519）
+;To be added
+
+# > 101 Everbloom++ 解锁高级会员权限 （20210519）
+;The content is obtained from the Cuttlefish WeChat public account
 
 # > 101 京东取消店铺会员 跳转浏览器版 （20210516）
 https://api\.m\.jd\.com\/client\.action\?appid=jd_shop_member&functionId=getShopMemberCardDetail&.+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/unbind.js
