--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -16,7 +16,7 @@
 ****Please don't quote this rewrite configuration****
 
 
-# > 102 VSCO 修复版 解锁VIP会员功能 （20210519）
+# > 102 VSCO++ 修复版 解锁VIP会员功能 （20210519）
 ;To be added
 
 # > 101 Everbloom++ 解锁高级会员权限 （20210519）
