--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -16,10 +16,14 @@
 ****Please don't quote this rewrite configuration****
 
 
-# > 102 VSCO++ 修复版 解锁VIP会员功能 （20210519）
-;To be added
 
-# > 101 Everbloom++ 解锁高级会员权限 （20210519）
+# > 104 
+
+
+# > 103 VSCO++ 修复版 解锁VIP会员功能 （20210519）
+;The content has been sent to the Cuttlefish WeChat group
+
+# > 102 Everbloom++ 解锁高级会员权限 （20210519）
 ;The content is obtained from the Cuttlefish WeChat public account
 
 # > 101 京东取消店铺会员 跳转浏览器版 （20210516）
