--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -20,8 +20,8 @@
 # > 104 
 
 
-# > 103 VSCO++ 修复版 解锁VIP会员功能 （20210519）
-;The content has been sent to the Cuttlefish WeChat group
+# > 103 VSCO++ 修复版 解锁VIP会员功能 （20210520）
+https:\/\/api\.revenuecat\.com\/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/vsco.js
 
 # > 102 Everbloom++ 解锁高级会员权限 （20210519）
 ;The content is obtained from the Cuttlefish WeChat public account
