--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -21,7 +21,7 @@
 
 
 # > 103 VSCO++ 修复版 解锁VIP会员功能 （20210520）
-;Add
+;The content is obtained from the Cuttlefish WeChat public account
 
 # > 102 Everbloom++ 解锁高级会员权限 （20210519）
 ;The content is obtained from the Cuttlefish WeChat public account
