--- a/Rewrite/Jd_unbind.conf
+++ b/Rewrite/Jd_unbind.conf
@@ -5,7 +5,7 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
 // @UpdateTime        20210515
-// @Tips              原先的重写方式对于某些店铺可能不适用，由此更改思路，利用QX的通知转到浏览器注销会员
+// @Tips              两种方式：弹出通知点击取消会员+当前页面取消会员
 // @Function          便于手动取消京东开的店铺会员
 // @Steps             【我的】->【我的钱包】->【卡包】->【点击某一个卡包】
 // @Steps             点击某个卡包，会弹出通知，点击通知跳转浏览器手动注销会员，重复点击相同的卡包不会多次弹出通知
@@ -14,6 +14,8 @@
 
 
 
-hostname = api.m.jd.com
+hostname = api.m.jd.com, shopmember.m.jd.com
+
+^https:\/\/shopmember\.m\.jd\.com\/shopcard\/\?(venderId=[0-9]+).* https:\/\/shopmember\.m\.jd\.com\/member\/memberCloseAccount\?$1 302
 
 https://api\.m\.jd\.com\/client\.action\?appid=jd_shop_member&functionId=getShopMemberCardDetail&.+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/unbind.js
