--- a/Rewrite/Jd_unbind.conf
+++ b/Rewrite/Jd_unbind.conf
@@ -16,6 +16,6 @@
 
 hostname = api.m.jd.com, shopmember.m.jd.com
 
-^https:\/\/shopmember\.m\.jd\.com\/shopcard\/\?(venderId=[0-9]+).* https:\/\/shopmember\.m\.jd\.com\/member\/memberCloseAccount\?$1 302
+^https:\/\/shopmember\.m\.jd\.com\/shopcard\/\?(venderId=[0-9]+).* 302 https:\/\/shopmember\.m\.jd\.com\/member\/memberCloseAccount\?$1
 
 https://api\.m\.jd\.com\/client\.action\?appid=jd_shop_member&functionId=getShopMemberCardDetail&.+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/unbind.js
