--- a/Profile/QuantumultX.conf
+++ b/Profile/QuantumultX.conf
@@ -2,20 +2,24 @@
 // @Name              墨鱼自用的QX配置文件
 // @Author            Cuttlefish
 // @TgChannel         https://t.me/ddgksf2021
-// @WechatID          公众号墨鱼手记
-// @UpdateTime        20210310
-// @Explain           若有问题，可以去TG联系我-> Https://t.me/ddgksf
+// @WechatID          墨鱼手记
+// @UpdateTime        20210523
+// @Explain           若有问题，可以去TG联系我-> Https://t.me/ddgksf2021
 // @Attention         本配置文件的Task只更新京东相关脚本
 // @Function          去广告+知乎+历史价格+油管+酷我+网易云破解+embyUnlocked
-// @Function          京东签到集合+解析器+人人视频+小小影视+荟聚动漫
+// @Function          京东签到集合+解析器+人人视频+小小影视
 // @ScriptURL         https://github.com/ddgksf2013/Cuttlefish/raw/master/Profile/QuantumultX.conf
 // ==/UserScript==
 
 
 [general]
+# > 用于节点延迟测试
 server_check_url= http://www.qualcomm.cn/generate_204
+# > 用于设置图标显示
 profile_img_url=https://github.githubassets.com/images/modules/site/integrators/google.png
+# > 用于Check节点IP地址
 geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/IP_API.js
+# > 功能强大的解析器
 resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/Scripts/resource-parser.js
 
 
@@ -25,7 +29,7 @@ resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/maste
 
 
 [rewrite_local]
-# TF 国区下载修正
+# > TF国区下载修正
 ^https?:\/\/testflight\.apple\.com\/v2\/accounts\/.*\/apps\/\d*/builds/\d*/install url request-body storefrontId":".*" request-body storefrontId":"143441-1,29"
 
 
@@ -37,12 +41,10 @@ https://github.com/ddgksf2013/Cuttlefish/raw/master/Rewrite/History_price.conf, 
 https://github.com/ddgksf2013/Cuttlefish/raw/master/Rewrite/Kuwo.conf, tag=酷我破解
 https://github.com/ddgksf2013/Cuttlefish/raw/master/Rewrite/Youtube.conf, tag=油管去广告
 https://subweb.oss-cn-hongkong.aliyuncs.com/Module/embyUnlocked.conf, tag=EMBY解锁
-https://github.com/ddgksf2013/Cuttlefish/raw/master/Rewrite/Avatarify.conf, tag=Avatarify破解
-https://github.com/ddgksf2013/Cuttlefish/raw/master/Rewrite/Hjdm.conf, tag=荟聚动漫破解
 https://github.com/ddgksf2013/Cuttlefish/raw/master/Rewrite/Rrtv.conf, tag=人人视频去广告
 https://github.com/ddgksf2013/Cuttlefish/raw/master/Rewrite/Q-Search.conf, tag=Q-Search
 https://github.com/ddgksf2013/Cuttlefish/raw/master/Rewrite/Xxys.conf, tag=小小影视Crack
-https://github.com/ddgksf2013/Cuttlefish/raw/master/Rewrite/Avatarify.conf, tag=Avatarify视频
+
 
 [server_local]
 shadowsocks=music.desperadoj.com:30003, method=aes-128-gcm, password=desperadoj.com_free_proxy_emx2, fast-open=false, udp-relay=false, tag=网易云1
@@ -66,7 +68,7 @@ server=/*testflight.apple.com/8.8.4.4
 
 
 [policy]
-static=网易云音乐, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
+static=网易云音乐, direct, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Netease_Music_Unlock.png
 static=全球加速, direct, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Global.png
 static=苹果服务, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Apple.png
 static=港台番剧, direct, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/StreamingSE.png
