--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -4,7 +4,7 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @TgChannel         频道已移除所有人员，私有不再对外公开
 // @WechatID          墨鱼手记
-// @UpdateTime        20210519
+// @UpdateTime        20210524
 // @Attention         Only for backup,please don't quote this rewrite configuration
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ForExplain        “++” is the sign of Http Catcher Rules
@@ -17,8 +17,8 @@
 
 
 
-# > 104 
-
+# > 104 Prisma 解锁高级会员权限 畅想VIP功能（20210524）
+https://api.neuralprisma.com/receipt/ios/status/prisma/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/psa.js
 
 # > 103 VSCO++ 修复版 解锁VIP会员功能 （20210520）
 ;The content is obtained from the Cuttlefish WeChat public account
