--- a/Rewrite/Jd_unbind.conf
+++ b/Rewrite/Jd_unbind.conf
@@ -3,7 +3,7 @@
 // @Attention         不是自动，不是自动，需要手动操作
 // @Author            @Cuttlefish
 // @TgChannel         https://t.me/ddgksf2021
-// @WechatID          公众号墨鱼手记
+// @WechatID          墨鱼手记
 // @UpdateTime        20210515
 // @Tips              两种方式：弹出通知点击取消会员+当前页面取消会员
 // @Function          便于手动取消京东开的店铺会员
