--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -15,7 +15,8 @@
 
 ****Please don't quote this rewrite configuration****
 
-
+# > 105 京粉佣金
+^https?://api\.m\.jd\.com/(client\.action|api)\?functionId=(wareBusiness|serverConfig|basicConfig|lite_wareBusiness|pingou_item) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/jfyj.js
 
 # > 104 Prisma 解锁高级会员权限 畅想VIP功能（20210524）
 https://api.neuralprisma.com/receipt/ios/status/prisma/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/psa.js
