--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -17,6 +17,9 @@
 
 
 
+# > 106 Github|Gist 加速访问（20210528）
+^(https?:\/\/(?:raw|gist)\.githubusercontent\.com\/.+)$ url 302 https://github.pengym.workers.dev/$1
+
 # > 105 京粉佣金 （20210526）by Wangsc1
 ^https?://api\.m\.jd\.com/(client\.action|api)\?functionId=(wareBusiness|serverConfig|basicConfig|lite_wareBusiness|pingou_item) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/jfyj.js
 
