--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -20,7 +20,7 @@
 # > 106 Github|Gist 加速访问（20210528）
 ^(https?:\/\/(?:raw|gist)\.githubusercontent\.com\/.+)$ url 302 https://github.pengym.workers.dev/$1
 
-# > 105 京粉佣金 （20210526）by Wangsc1
+# > 105 京粉转链 （20210526）by Wangsc1
 ^https?://api\.m\.jd\.com/(client\.action|api)\?functionId=(wareBusiness|serverConfig|basicConfig|lite_wareBusiness|pingou_item) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/jfyj.js
 
 # > 104 Prisma 解锁高级会员权限 畅想VIP功能（20210524）
