--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -17,7 +17,7 @@
 
 
 
-# > 106 Github|Gist 加速访问（20210528）
+# > 106 Github|Gist 加速访问（20210528）by Peng-YM
 ^(https?:\/\/(?:raw|gist)\.githubusercontent\.com\/.+)$ url 302 https://github.pengym.workers.dev/$1
 
 # > 105 京粉转链 （20210526）by Wangsc1
