--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -1,8 +1,7 @@
 // ==UserScript==
 // @ScriptName        Quan Crack 脚本
 // @Author            Cuttlefish
-// @TgChannel         https://t.me/ddgksf2021
-// @TgChannel         频道已移除所有人员，私有不再对外公开
+// @TgChannel         https://t.me/joinchat/zOQix36_8lMyNzNl
 // @WechatID          墨鱼手记
 // @UpdateTime        20210524
 // @Attention         Only for backup,please don't quote this rewrite configuration
