--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -1,7 +1,7 @@
 // ==UserScript==
 // @ScriptName        Quan Crack 脚本
 // @Author            Cuttlefish
-// @TgChannel         https://t.me/joinchat/zOQix36_8lMyNzNl
+// @TgChannel         https://t.me/ddgksf2021
 // @WechatID          墨鱼手记
 // @UpdateTime        20210524
 // @Attention         Only for backup,please don't quote this rewrite configuration
@@ -14,7 +14,10 @@
 
 ****Please don't quote this rewrite configuration****
 
+# > 108 
 
+# > 107 
+url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/poh.js
 
 # > 106 Github|Gist 加速访问（20210528）by Peng-YM
 ^(https?:\/\/(?:raw|gist)\.githubusercontent\.com\/.+)$ url 302 https://github.pengym.workers.dev/$1
