--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -15,6 +15,7 @@
 ****Please don't quote this rewrite configuration****
 
 # > 108 
+url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/tex.js
 
 # > 107 
 url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/poh.js
