--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -17,7 +17,7 @@
 # > 108 
 url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/tex.js
 
-# > 107 Photomath 你掌上的计算小能手VIP（20210602）
+# > 107 Photomath 你掌上的拍照计算小能手VIP（20210602）
 https://lapi.photomath.net/v4/me url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/poh.js
 
 # > 106 Github|Gist 加速访问（20210528）by Peng-YM
