--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -3,7 +3,7 @@
 // @Author            Cuttlefish
 // @TgChannel         https://t.me/ddgksf2021
 // @WechatID          墨鱼手记
-// @UpdateTime        20210602
+// @UpdateTime        20210604
 // @Attention         Only for backup,please don't quote this rewrite configuration
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ForExplain        “++” is the sign of Http Catcher Rules
@@ -13,6 +13,9 @@
 // ==/UserScript==
 
 ****Please don't quote this rewrite configuration****
+
+# > 109 PicCollage++ DIY你的个性贴图（20210604）
+;The content is obtained from the Cuttlefish WeChat public account
 
 # > 108 
 url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/tex.js
