--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -3,7 +3,7 @@
 // @Author            Cuttlefish
 // @TgChannel         https://t.me/ddgksf2021
 // @WechatID          墨鱼手记
-// @UpdateTime        20210604
+// @UpdateTime        20210606
 // @Attention         Only for backup,please don't quote this rewrite configuration
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
 // @ForExplain        “++” is the sign of Http Catcher Rules
@@ -16,6 +16,9 @@
 
 
 
+
+# > 110 Fimo++ unlock 会员付费相机（20210607）
+;The content is obtained from the Cuttlefish WeChat public account
 
 # > 109 PicCollage++ DIY你的个性贴图（20210604）
 ;The content is obtained from the Cuttlefish WeChat public account
