--- a/Rewrite/Quan_crack.conf
+++ b/Rewrite/Quan_crack.conf
@@ -17,6 +17,10 @@
 
 
 
+
+# > 111 HashPhotos 抓旧版升级最新版即Premium（20210607）
+;The old version number is obtained from the Cuttlefish WeChat public account
+
 # > 110 Fimo++ unlock 会员付费相机（20210607）
 ;The content is obtained from the Cuttlefish WeChat public account
 
