--- a/Rewrite/MyCookie.conf
+++ b/Rewrite/MyCookie.conf
@@ -3,7 +3,7 @@
 // @Author            Cuttlefish
 // @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        20210411
+// @UpdateTime        20210609
 // @Function          获取cookies
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/MyCookie.conf
 // ==/UserScript==
@@ -11,15 +11,16 @@
 
 
 # > 01 中青
+# > 
 https:\/\/kd\.youth\.cn\/WebApi\/NewTaskIos\/getTaskList url script-request-header https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Backup/youth.js
 https:\/\/kandian\.wkandian\.com\/v5\/article\/info\.json url script-request-header https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Backup/youth.js
 https:\/\/kandian\.wkandian\.com\/v5\/user\/stay\.json url script-request-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Backup/youth.js
-#浏览赚
+# > 浏览赚
 https:\/\/kandian\.wkandian\.com\/v5\/task\/browse_start\.json url script-request-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Backup/youth_gain.js
 https:\/\/kandian\.wkandian\.com\/v5\/Nameless\/adlickstart\.json url script-request-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Backup/youth_gain.js
-#提现
+# > 提现
 https:\/\/kandian\.wkandian\.com\/v5\/\w+\/withdraw\d?\.json url script-request-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Backup/youth.js
-#阅读
+# > 阅读
 https:\/\/kandian\.wkandian\.com\/v5\/article\/info\.json url script-request-header https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Backup/Youth_Read.js
 https:\/\/kandian\.wkandian\.com\/v5\/article\/complete\.json url script-request-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Backup/Youth_Read.js
 https:\/\/kandian\.wkandian\.com/v5\/user\/stay\.json url script-request-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Backup/Youth_Read.js
