--- a/Applet/Quan.conf
+++ b/Applet/Quan.conf
@@ -5,7 +5,7 @@
 // @Author            Cuttlefish
 // @TgChannel         https://t.me/ddgksf2021
 // @WechatID          公众号墨鱼手记
-// @UpdateTime        20201228
+// @UpdateTime        20210611
 // @ForHelp           若有需要调试的小程序，可公众号后台回复小程序名称
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Applet/Quan.conf
 // @AppletNumer       共计 26 个小程序（更新中...）
@@ -19,13 +19,13 @@
 
 hostname = jabi.coding.net, api.bspapp.com, 3dd0be8a-54fe-43ff-a0e7-f670c4f20432.bspapp.com, *.tslt.xyz, g.syshhc.top, c.jxjt888.top, www.laoguikeji.cn, qj.bpojie.com, b.tslt.xyz, m.xgjyouhui.com, www.freeheikeji.cn, xcx.xianbaow.com, *.smkj33.top, *.ddly666.top, hkj178.com, a.jxjt888.top, lysl2020.com, www.i3zh.com, iosoi.cn, jabi.coding.net, jt.jxjt888.top, gjsx.vip, d.syshhc.top, gz.gongzijx.com, tvapp.guilaile.cn, www.benbenfx.xyz, 
 
-# > 029 扎比科技资源箱 微信小程序crack 弹框显示最新三天download地址（20201214）
+# > 029 扎比科技资源箱 （20201214）
 https://jabi.coding.net/p/xcx/d/xcx/git/raw/master/jabikj.json url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/jabi.js
 
-# > 028 纸塘壁纸 微信小程序 免广告直接下载原图壁纸（20201006）Attention：登录使用⭐️
+# > 028 纸塘壁纸 （20201006）
 https://api.bspapp.com/client url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ztbz.js
 
-# > 027 予图阁 微信小程序 弹窗给出原图及1080图的URL（20210119）
+# > 027 予图阁（20210119）
 https://3dd0be8a-54fe-43ff-a0e7-f670c4f20432.bspapp.com/.*get_wallpaper_detail url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ytg.js
 
 # > 026 科技窝（20201228）
