--- a/Rewrite/UnlockApp.conf
+++ b/Rewrite/UnlockApp.conf
@@ -1,1 +1,209 @@
+// ==UserScript==
+// @ScriptName        Quan Crack 脚本
+// @Author            Cuttlefish
+// @TgChannel         https://t.me/ddgksf2021
+// @WechatID          墨鱼手记
+// @UpdateTime        20210613
+// @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
+// @Appreciation      a cup of tea
+// @CollectApp        https://docs.qq.com/sheet/DYmRTQXpVY0hNcGls?tab=BB08J2
+// @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Quan_crack.conf
+// ==/UserScript==
 
+
+
+hostname = lapi.photomath.net, api.neuralprisma.com, api.m.jd.com, api.woaoo.net, lchttpapi.xczim.com, web.vizmato.com, purchases.ws.pho.to, vip1.kuwo.cn, dayone.me,dayone.app, vstou.faxingwu.com, everest.castbox.fm, api.gotokeep.com, apivip.zybang.com, mall.zuoyebang.com, pay.wecut.com, *.nebo.app, *.adobe.*,ipadcms.caixin.com, api.yikaobang.com.cn, pan.baidu.com, www.babybooks.top, zebra.maka.im, xrckeji.com, xianbeikeji.com, xrckeji.com, quanzi.jizhangapp.com, 106.54.2.168, api.yonekura.cn, api.xiuxiu.meitu.com, api.meiyan.com, panel.getdailyart.com, biz.caiyunapp.com, www.40sishi.com, outcut.szsszykj.com, picturebook.ipalfish.com, license.pdfexpert.com, api2.fitplanapp.com, api.shayujizhang.com, r.51wnl-cq.com, api.dushu.io, getway.radio.cn, api.reface.video, www.helloshiyu.com, api.bspapp.com, avoscloud.com, bbs.maibaapp.com, duoting.tatatimes.com, cm.szsszykj.com, api.flexibits.com, 115.28.168.103, dbapi.ganbuguo.com, api.591master.com, api.pushover.net, subs.platforms.team, api.hulusaas.com, *.snailsleep.net, api.jiaonizuocai.com, nmeditation.snailsleep.net, claritywallpaper.com, subscription-service.neuralprisma.com, diary.7english.cn
+
+
+# > 064 
+;url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/tex.js
+
+# > 063 Photomath （20210602） by ddgksf2013
+https://lapi.photomath.net/v4/me url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/poh.js
+
+# > 062 Prisma （20210524） by ddgksf2013
+https://api.neuralprisma.com/receipt/ios/status/prisma/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/psa.js
+
+# > 061 京东取消店铺会员（20210516） by ddgksf2013
+https://api\.m\.jd\.com\/client\.action\?appid=jd_shop_member&functionId=getShopMemberCardDetail&.+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/unbind.js
+
+# > 060 我奥篮球 （20210515） by photonmang
+http://api.woaoo.net/.+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/walq.js
+
+# > 059 西窗烛 （20210514） by ddgksf2013
+https://lchttpapi.xczim.com/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xcz.js
+
+# > 058 Vizmato（20210512） by ddgksf2013
+https://web.vizmato.com/itunesreceipt_v5.php url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/vm.js
+
+# > 057 ToonMe（20210505） by ddgksf2013
+https://purchases.ws.pho.to/api/v2/apple/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/tm.js
+
+# > 056 酷我皮肤（20210425） by ddgksf2013
+^https?:\/\/vip1\.kuwo\.cn\/(vip\/v2\/theme)  url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/theme.js
+
+# > 055 Dayone（20210515） by langkhach
+https:\/\/dayone\.(me|app)\/api\/(users|v2\/users\/(account-status|receipt))$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/dayone.js
+
+# > 054 卡通相机（20210422） by ddgksf2013
+http://vstou.faxingwu.com/huihua/user/getUser url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ktxj.js
+
+# > 053 Castbox（20210418） by ddgksf2013
+https://everest.castbox.fm/auth/user/properties\?country=\w+&raw=1 url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cb.js
+
+# > 052 Keep（20210418） by ddgksf2013
+https://api.gotokeep.com/(.+/subject|.+/dynamic|.+/coursePlus/.+|.+/status|.+/tab|.+/my|.+/start|.+/join|.+/complete|.+/detail/.+|.+/preview|.+/auth|.+/tab|.+/days) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/keep_new.js
+
+# > 051 作业帮 （20210407） by photonmang
+https://mall.zuoyebang.com/mall/goods/audio/voice/list?audioId=\d+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/zyb.js
+https://apivip.zybang.com/vipols/vip/viphomev1?.+ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/zyb.js
+
+# > 050 PdfExpert（20210403） by ddgksf2013
+https:\/\/license\.pdfexpert\.com\/api\/.+\/pdfexpert6\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/pdfexpert.js
+
+# > 049  MolyCam and VaporCam （20210402） by ddgksf2013
+https:\/\/pay\.wecut\.com\/apple\/(iosVerifyReceipt|iosAppVerifyReceipt)\.php url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/mv.js
+
+# > 048 Myscript Nebo（20210321） by ddgksf2013
+^https?:\/\/.*\.nebo\.app\/api\/.*\/inapppurchase\/apple\/receipt url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/nebo.js
+
+# > 047 Photoshop（20210321） by ddgksf2013
+^https:\/\/.*\.adobe\..*\/mobile_profile\/nul\/v\d$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ps.js
+
+# > 046 财新周刊（20210320） by ddgksf2013
+http://ipadcms.caixin.com/tmp/articles/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cxzk.js
+
+# > 045 医考帮（20210313） by ddgksf2013
+https://api.yikaobang.com.cn/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ykb.js
+
+# > 044 百度云（20210310） by ddgksf2013
+https:\/\/pan\.baidu\.com\/rest\/2\.0\/membership\/user url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/bdcloud.js
+
+# > 043 儿童睡前故事 （20210131） by ddgksf2013
+https://www.babybooks.top/v0/profile url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/etsqgs.js
+
+# > 042 斑马海报 （20210130） by ddgksf2013
+https://zebra.maka.im/api/user/info url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/bmhb.js
+
+# > 041 读书笔记 （20210106） by ddgksf2013
+https://xrckeji.com/union/app/user/query url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/mzjz.js
+
+# > 040 小习惯 （20210106） by ddgksf2013
+https://xianbeikeji.com/daily/app/user/query url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/mzjz.js
+
+# > 039 萌猪记账 （20210106） by ddgksf2013
+https://xrckeji.com/itally/app/user/query url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/mzjz.js
+
+# > 038 Scanner （20201219） by ddgksf2013
+https://license.pdfexpert.com/api/2.0/scanner/subscription/refresh url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/sp.js
+
+# > 037 圈子记账 （20201214） by ddgksf2013
+https://quanzi.jizhangapp.com/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/qzjz.js
+
+# > 036 emmo （20201209） by ddgksf2013
+^http://106.54.2.168/emmoDiary/user/getUser url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/emmo.js
+
+# > 035 用电助手 （20201206） by ddgksf2013
+https://api.yonekura.cn/3.6.8/uicommon/getuser url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cdzs.js
+
+# > 034 美图秀秀 （20201124） by ddgksf2013
+https://api.xiuxiu.meitu.com/v1/user/show.json url response-body vip_type":0 response-body vip_type":1
+
+# > 033 美颜相机 （20201123） by ddgksf2013
+https://api.meiyan.com/iap/verify.json url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/myxj.js
+
+# > 032 每日艺术 （20201123） by ddgksf2013
+https://panel.getdailyart.com/APIMobile/users/single url response-body account_type":"0 response-body account_type":"2
+
+# > 031 彩云天气 （20201121） by ddgksf2013
+https?:\/\/biz\.caiyunapp\.com\/(membership_rights|v2\/user) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/caiyun.js
+
+# > 030 豌豆清单 (20201112) by ddgksf2013
+^https:\/\/www\.40sishi\.com\/list\/user\/profile$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/wdqd.js
+
+# > 029 Quicut (20201112) by ddgksf2013
+http://outcut.szsszykj.com/api/OverseasPay/GetVip url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/qc.js
+
+# > 028 伴鱼绘本 (20201109) by ddgksf2013
+https://picturebook.ipalfish.com/pfapi(/profile/picturebook/get|/base/growthsystem/user/vip/equity/get) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/byhb.js
+
+# > 027 Document （20201108） by ddgksf2013
+https:\/\/license\.pdfexpert\.com\/api\/.+\/subscription\/(refresh$|check$) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/documents.js
+
+# > 026 Fitplan （20201107） by ddgksf2013
+https://api2.fitplanapp.com/fitplan-server/v2/user/profile url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/fitplan.js
+
+# > 025 鲨鱼记账 （20201104） by ddgksf2013
+https://api.shayujizhang.com/account/detail/info/ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/syjz.js
+
+# > 024 万年历（20201028） by ddgksf2013
+https://r.51wnl-cq.com/Api/User/GetExtInfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/wnl.js
+
+# > 023 樊登读书 （20201026） by ddgksf2013
+https://api.dushu.io/Album/Info url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/fdds.js
+
+# > 022 云听 （20201020） by ddgksf2013
+http://getway.radio.cn/app* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/yt.js
+
+# > 021 Reface （20201013） by ddgksf2013
+https://api.reface.video/api/reface/v1/iosSubscription url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/reface.js
+
+# > 020 睡眠助手 （20201010） by ddgksf2013
+https://www.helloshiyu.com/sleep/user/profile url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/smzs.js
+
+# > 019 纸塘壁纸 （20201006） by ddgksf2013
+https://api.bspapp.com/client url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/ztbz.js
+
+# > 018 汉字的故事 （20201002） by ddgksf2013
+https://avoscloud.com/1.1/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/hzdgs.js
+
+# > 017 小妖精美化 （20201002） by ddgksf2013
+https://bbs.maibaapp.com/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/xyjmh.js 
+
+# > 016 英语阅读 （20200926） by ddgksf2013
+^http:\/\/duoting\.tatatimes\.com\/tataeraapi\/api\.s\?h=QueryVipUser url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/englishread.js 
+
+# > 015 趣制作（20200925） by ddgksf2013
+https://cm.szsszykj.com/interface/GetVip.php url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/qzz.js
+
+# > 014 Fantastical（20200924） by ddgksf2013
+^https:\/\/api\.flexibits\.com\/(v1\/auth\/device|v1\/account\/details) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/fantastical.js
+
+# > 013 一言（20200916） by ddgksf2013
+http://115.28.168.103:8080/yiyan/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/yiyan.js
+
+# > 012 Done （20200914） by ddgksf2013
+http://dbapi.ganbuguo.com/user/userinfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/done.js
+
+# > 011 手机硬件管家 (20200912) by ddgksf2013
+http:\/\/api\.591master\.com\:8081\/(1.0|3.6.8)\/ui(forum|common)\/(downloadwallpaper|getuser) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/phoneyjgj.js
+
+# > 010 MeisterTask (20200910) by ddgksf2013
+https://www.mindmeister.com/api/v2/licenses/meistertask url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/meistertask.js
+
+# > 009 Pushover （20200905） by ddgksf2013
+^https://api.pushover.net/1/messages.json url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/pushover.js
+
+# > 008 Productive （20200905） by ddgksf2013
+^https:\/\/subs\.platforms\.team\/.+\/apple\/verify$ url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/productive.js
+
+# > 007 葫芦时刻 （20200905） by ddgksf2013
+^https:\/\/api\.hulusaas\.com\/api\/* url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/hulu.js
+
+# > 006 蜗牛睡眠 （20200906） by ddgksf2013
+^https:\/\/(snailsleep\.net\/|(music|community)\.snailsleep\.net\/)(snail\/v1\/profile\/get|snail-music\/music\/(sleeping|meditation)\/single\/list) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/wnsm.js
+
+# > 005 菜谱大全 （20200906） by ddgksf2013
+https?:\/\/api\.jiaonizuocai\.com url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/cpdq.js
+
+# > 004 大象冥想 （20200904） by ddgksf2013
+^https?:\/\/nmeditation\.snailsleep\.net\/meditation-(audio|user|order|audio)\/(api|user)\/(audio\/master\/detail|get\/info|order/user\/vip\/info|ad\/get) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/dxmx.js
+
+# > 003 克拉壁纸 （20200903） by ddgksf2013
+^https:\/\/claritywallpaper\.com\/clarity\/api\/(userInfo|special\/queryByCatalogAll) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/clarity.js
+
+# > 002 lensa （20200902） by ddgksf2013
+^https?:\/\/subscription-service\.neuralprisma\.com\/subscription_get url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/lensa.js
+
+# > 001 moo （20200831)） by ddgksf2013
+https://diary.7english.cn:2433//api/user/userInfo url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Crack/moo.js
