--- a/Rewrite/UnlockApp.conf
+++ b/Rewrite/UnlockApp.conf
@@ -5,7 +5,7 @@
 // @WechatID          墨鱼手记
 // @UpdateTime        20210613
 // @ScriptTime        若脚本失效可抓取对应时间的旧版本应用
-// @Appreciation      a cup of tea
+// @Icon              ✅ 🔓 🚫 ❌
 // @CollectApp        https://docs.qq.com/sheet/DYmRTQXpVY0hNcGls?tab=BB08J2
 // @ScriptURL         https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Rewrite/Quan_crack.conf
 // ==/UserScript==
