--- a/Rewrite/Advertising.conf
+++ b/Rewrite/Advertising.conf
@@ -27,7 +27,7 @@ hostname = -lark-frontier-hl.snssdk.com,api.weibo.cn,mapi.weibo.com,www.zhihu.co
 
 # ---(By srk24)---
 # > bilibili
-^https?:\/\/app\.bilibili\.com\/x\/v2\/splash\/list url script-response-body https://raw.githubusercontent.com/srk24/profile/master/bilibili_splash.js
+;^https?:\/\/app\.bilibili\.com\/x\/v2\/splash\/list url script-response-body https://raw.githubusercontent.com/srk24/profile/master/bilibili_splash.js
 # ------
 
 # > WeChat Official Account
