添加星系牧场控制兑换京豆开关，默认false，需要请在626行改为true

--- a/sample/config.sh.sample
+++ b/sample/config.sh.sample
@@ -1,6 +1,6 @@
-## Version: v3.41.0
-## Date: 2021-06-13
-## Update Content: 重新加入AutoHelpOther参数，但是部分人启用后并不生效，默认false自行按照自身情况修改为true。（配置文件不会自动智能替换，需要手动进入面板通过对比工具手动替换）
+## Version: v3.42.0
+## Date: 2021-06-30
+## Update Content: 添加星系牧场控制兑换京豆开关，默认false，需要请在626行改为true（配置文件不会自动智能替换，需要手动进入面板通过对比工具手动替换）
 
 ## 上面版本号中，如果第2位数字有变化，那么代表增加了新的参数，如果只有第3位数字有变化，仅代表更新了注释，没有增加新的参数，可更新可不更新
 
@@ -621,6 +621,12 @@ export CASH_NOTIFY_CONTROL=""
 ################################## 定义jd_jdzz是否是否静默运行 ##################################
 ## 控制jd_jdzz是否静默运行，false 为否(发送推送通知消息)，true 为是(即：不发送推送通知消息)
 export JDZZ_NOTIFY_CONTROL=""
+
+
+################################## 定义星系牧场是否兑换 ##################################
+##星系牧场 兑换京豆默认false不兑换，需要兑换请改为true##
+export Cowexchange=""
+
 
 ################################## 定义取关参数（选填） ##################################
 ## jd_unsubscribe这个任务是用来取关每天做任务关注的商品和店铺，默认在每次运行时取关20个商品和20个店铺
