--- a/Rewrite/Youtube.conf
+++ b/Rewrite/Youtube.conf
@@ -1,3 +1,8 @@
-hostname = *.googlevideo.com
+hostname = *.googlevideo.com,www.youtube.com,s.youtube.com
 
-^https?:\/\/.+?\.googlevideo\.com\/.+&(oad|ctier)=(?!A) url script-response-body https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/youtube.js
+(^https?:\/\/(?!redirector)[\w-]+\.googlevideo\.com\/((?!dclk_video_ads).)+)(ctier=L)(&.+) url 302 $1$3
+^https?:\/\/[\w-]+\.googlevideo\.com\/((?!(dclk_video_ads|videoplayback)).)+&(oad|ctier) url reject
+
+^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads url reject
+^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) url reject
+^https?:\/\/\s.youtube.com/api/stats/qoe?.*adformat= url reject
